now explicit module reads unnamed module