@@ -1,3 +1,3 @@
 . ../env.sh
 
-$JAVA_HOME/bin/java $JAVA_OPTIONS --module-path mlib -cp cplib/cpmain.jar${PATH_SEPARATOR}cplib/cpb.jar --module modmain/pkgmain.Main 2>&1 | myecho
+$JAVA_HOME/bin/java $JAVA_OPTIONS --add-reads modmain=ALL-UNNAMED --module-path mlib --class-path cplib/cpmain.jar${PATH_SEPARATOR}cplib/cpb.jar --module modmain/pkgmain.Main 2>&1 | myecho
